Sonar review fixes.